b-g/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app-blue
  labels:
    app: my-app
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: my-app
    VERSION: v1.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-green
  labels:
    app: my-app
spec:
  ports:
    - name: http
      port: 90
      targetPort: http
  selector:
    app: my-app
    VERSION: v2.0.0
